# matsuzawa-20260113-4

./: pyproject.toml
.research/: research_history.json
.research/latex/iclr2024/: .chktexrc  fix_all_unicode.py  fix_unicode.py  main.tex  main.tex.backup
.research/results/: stderr.txt  stdout.txt
.research/results/comparison/: aggregated_metrics.json
config/: config.yaml
config/runs/: comparative-1-gemma-VTAB+MD.yaml  proposed-gemma-VTAB+MD.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
