[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctgr-tg-hydra"
version = "0.1.0"
description = "CTGR-TG experiments with Hydra + WandB"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://example.org/ctgr-tg-hydra"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest", "optuna"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = {extras = ["cuda"] , version = ">=1.12"}
numpy = "^1.23"
pandas = "^1.5"
wandb = ">=0.14"
hydra-core = ">=1.3"
omegaconf = ">=2.2"
matplotlib = ">=3.6"
seaborn = ">=0.12"
scikit-learn = ">=1.0"
optuna = ">=3.2"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta" 
